# Candle

./: .gitmodules  CMakeLists.txt  Candle.pro  candle.pro  readme.md
etc/: 50-whb04b.rules
examples/: macro-notes.txt  tool-change-tlo.txt  tool-change-wcs.txt  xyz-probe.4nc  xyz-probe.txt
src/: candle.pro  frmabout.cpp  frmmain.cpp  frmmain.h  frmmain.ui  frmsettings.cpp  frmsettings.h  frmsettings.ui  images.qrc  machinecontrol.h  rpn-cnc.cpp  rpn-cnc.h
src/candle/: candle.pro  frmmain.cpp  frmmain.h
src/candle/widgets/: glwidget.cpp
src/designerplugins/: designerplugins.pro
src/designerplugins/cameraplugin/: cameraplugin.pro
src/designerplugins/customwidgetsplugin/: customwidgetsplugin.pro
src/drawers/: shaderdrawable.h
src/macros/: macroprocessor.cpp  macroprocessor.h
src/pendant/: notes.md  whb04b.cpp  whb04b.h
src/rpn-lang/: rpn-cnc.h  rpn.h
src/rpn-lang/src/: rpn-cnc.cpp  rpn-interp.cpp  rpn-stack.cpp  types-dict.cpp
src/rpn-lang/ui/: rpnkeypad.cpp  rpnkeypad.h
src/rpncalc/: readme.md  rpncalc.cpp  rpncalc.h  rpncalc.ui
src/rpnkeypad/: rpnkeypad.cpp  rpnkeypad.h  rpnkeypad.ui
src/scriptbindings/qtbindings/: qtbindingsbase.pri
src/tests/: testmc.cpp  testmc.h
src/tests/macroprocessor/: macroprocessor.pro  main.cpp  testmacro.h
src/tests/rpnkeypad/: main.cpp
src/translations/: candle_es.ts  candle_fr.ts  candle_pt.ts  candle_ru.ts
src/widgets/: glwidget.cpp
